--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -101,10 +101,40 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.11/site-packages (0.5.0)\n",
-      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.11/site-packages (3.12.0)\n",
+      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (3.12.0)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (8.22.2)\n",
       "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
       "  Using cached SQLAlchemy-2.0.36-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.7 kB)\n",
+      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.5.1)\n",
+      "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
+      "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy>=2.0->ipython-sql) (4.11.0)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.11/site-packages (from sqlalchemy>=2.0->ipython-sql) (3.0.3)\n",
+      "Requirement already satisfied: decorator in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (0.19.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (0.1.7)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (3.0.42)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (2.18.0)\n",
+      "Requirement already satisfied: stack-data in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (0.6.2)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (5.14.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in /opt/conda/lib/python3.11/site-packages (from ipython->ipython-sql) (4.9.0)\n",
+      "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.11/site-packages (from prettytable->ipython-sql) (0.2.13)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /opt/conda/lib/python3.11/site-packages (from jedi>=0.16->ipython->ipython-sql) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.11/site-packages (from pexpect>4.3->ipython->ipython-sql) (0.7.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.0.1)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
+      "Using cached SQLAlchemy-2.0.36-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
+      "Installing collected packages: sqlalchemy\n",
+      "  Attempting uninstall: sqlalchemy\n",
+      "    Found existing installation: SQLAlchemy 1.3.9\n",
+      "    Uninstalling SQLAlchemy-1.3.9:\n",
+      "      Successfully uninstalled SQLAlchemy-1.3.9\n",
+      "Successfully installed sqlalchemy-2.0.36\n",
+      "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.11/site-packages (0.5.0)\n",
+      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.11/site-packages (3.12.0)\n",
+      "Requirement already satisfied: ipython in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (8.22.2)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (2.0.36)\n",
       "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.5.1)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (1.16.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.11/site-packages (from ipython-sql) (0.2.0)\n",
@@ -123,21 +153,13 @@
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.11/site-packages (from pexpect>4.3->ipython->ipython-sql) (0.7.0)\n",
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.0.1)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (2.4.1)\n",
-      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n",
-      "Using cached SQLAlchemy-2.0.36-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.2 MB)\n",
-      "Installing collected packages: sqlalchemy\n",
-      "  Attempting uninstall: sqlalchemy\n",
-      "    Found existing installation: SQLAlchemy 1.3.9\n",
-      "    Uninstalling SQLAlchemy-1.3.9:\n",
-      "      Successfully uninstalled SQLAlchemy-1.3.9\n",
-      "Successfully installed sqlalchemy-2.0.36\n"
+      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.11/site-packages (from stack-data->ipython->ipython-sql) (0.2.2)\n"
      ]
     }
    ],
    "source": [
-    "!pip install ipython-sql prettytable\n",
-    "import prettytable\n",
-    "prettytable.DEFAULT='DEFAULT'"
+    "!pip install ipython-sql\n",
+    "!pip install ipython-sql prettytable"
    ]
   },
   {
@@ -156,6 +178,8 @@
    "outputs": [],
    "source": [
     "import csv, sqlite3\n",
+    "import prettytable\n",
+    "prettytable.DEFAULT = 'DEFAULT'\n",
     "\n",
     "con = sqlite3.connect(\"my_data1.db\")\n",
     "cur = con.cursor()"
@@ -333,7 +357,7 @@
     }
    ],
    "source": [
-    "%sql select distinct \"Launch_Site\" from SPACEXTBL"
+    "%sql select distinct \"Launch_Site\" from SPACEXTABLE"
    ]
   },
   {
@@ -456,7 +480,7 @@
     }
    ],
    "source": [
-    "%sql select * from SPACEXTBL where \"Launch_Site\" like \"CCA%\" limit 5"
+    "%sql select * from SPACEXTABLE where \"Launch_Site\" like \"CCA%\" limit 5"
    ]
   },
   {
@@ -490,7 +514,7 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>sum(&quot;PAYLOAD_MASS__KG_&quot;)</th>\n",
+       "            <th>Total Payload Mass by NASA (CRS)</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -510,7 +534,7 @@
     }
    ],
    "source": [
-    "%sql select sum(\"PAYLOAD_MASS__KG_\") FROM SPACEXTBL where Customer = \"NASA (CRS)\""
+    "%sql select sum(\"PAYLOAD_MASS__KG_\") as 'Total Payload Mass by NASA (CRS)' FROM SPACEXTABLE where Customer = \"NASA (CRS)\""
    ]
   },
   {
@@ -544,7 +568,7 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>avg(&quot;PAYLOAD_MASS__KG_&quot;)</th>\n",
+       "            <th>booster version F9 v1.1 Average Payload Mass</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -564,7 +588,7 @@
     }
    ],
    "source": [
-    "%sql select avg(\"PAYLOAD_MASS__KG_\") from SPACEXTBL where \"Booster_Version\" = \"F9 v1.1\""
+    "%sql select avg(\"PAYLOAD_MASS__KG_\") as 'booster version F9 v1.1 Average Payload Mass' from SPACEXTABLE where \"Booster_Version\" = \"F9 v1.1\""
    ]
   },
   {
@@ -598,7 +622,7 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>min(Date)</th>\n",
+       "            <th>first succesful landing outcome in ground pad</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -618,7 +642,7 @@
     }
    ],
    "source": [
-    "%sql select min(Date) from SPACEXTBL where \"Landing_Outcome\" = \"Success (ground pad)\""
+    "%sql select min(Date) as 'first succesful landing outcome in ground pad' from SPACEXTABLE where \"Landing_Outcome\" = \"Success (ground pad)\""
    ]
   },
   {
@@ -686,7 +710,7 @@
     }
    ],
    "source": [
-    "%sql select \"Booster_Version\",\"PAYLOAD_MASS__KG_\" from SPACEXTBL where (\"Landing_Outcome\" = \"Success (drone ship)\") and (\"PAYLOAD_MASS__KG_\" > 4000) and (\"PAYLOAD_MASS__KG_\" < 6000)"
+    "%sql select \"Booster_Version\",\"PAYLOAD_MASS__KG_\" from SPACEXTABLE where (\"Landing_Outcome\" = \"Success (drone ship)\") and (\"PAYLOAD_MASS__KG_\" BETWEEN 4000 AND 6000)"
    ]
   },
   {
@@ -749,14 +773,14 @@
     "%%sql\n",
     "select 'Success' as Outcome,\n",
     "        sum(case when Mission_Outcome like '%Success%' then 1 else 0 end) as count\n",
-    "from SPACEXTBL\n",
+    "from SPACEXTABLE\n",
     "group by Outcome\n",
     "\n",
     "union\n",
     "\n",
     "select 'Failure' as Outcome,\n",
     "        sum(case when Mission_Outcome like '%Failure%' then 1 else 0 end) as count\n",
-    "from SPACEXTBL\n",
+    "from SPACEXTABLE\n",
     "group by Outcome;"
    ]
   },
@@ -867,7 +891,7 @@
     }
    ],
    "source": [
-    "%sql select distinct \"Booster_Version\",\"PAYLOAD_MASS__KG_\" from SPACEXTBL where \"PAYLOAD_MASS__KG_\" =(select max(\"PAYLOAD_MASS__KG_\") from SPACEXTBL)"
+    "%sql select distinct \"Booster_Version\",\"PAYLOAD_MASS__KG_\" from SPACEXTABLE where \"PAYLOAD_MASS__KG_\" =(select max(\"PAYLOAD_MASS__KG_\") from SPACEXTBL)"
    ]
   },
   {
@@ -934,7 +958,7 @@
     }
    ],
    "source": [
-    "%sql select substr(Date, 6,2) as month,\"Landing_Outcome\",\"Booster_Version\",\"Launch_Site\" from SPACEXTBL where (substr(Date,0,5)='2015') and (\"Landing_Outcome\"=\"Failure (drone ship)\")"
+    "%sql select substr(Date, 6,2) as month,\"Landing_Outcome\",\"Booster_Version\",\"Launch_Site\" from SPACEXTABLE where (substr(Date,1,4)='2015') and (\"Landing_Outcome\"=\"Failure (drone ship)\")"
    ]
   },
   {
@@ -969,7 +993,7 @@
        "    <thead>\n",
        "        <tr>\n",
        "            <th>Landing_Outcome</th>\n",
-       "            <th>count(&quot;Landing_Outcome&quot;)</th>\n",
+       "            <th>Count</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
@@ -1025,7 +1049,7 @@
     }
    ],
    "source": [
-    "%sql select \"Landing_Outcome\",count(\"Landing_Outcome\") from SPACEXTBL where Date between '2010-06-04' and '2017-03-20' group by \"Landing_Outcome\" order by count(\"Landing_Outcome\") DESC"
+    "%sql select \"Landing_Outcome\",count(\"Landing_Outcome\") as 'Count' from SPACEXTABLE where Date between '2010-06-04' and '2017-03-20' group by \"Landing_Outcome\" order by count(\"Landing_Outcome\") DESC"
    ]
   },
   {
@@ -1105,7 +1129,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.9"
   },
-  "prev_pub_hash": "a5fa84525a820d08c9ec9c9cccf7d39455745aa2be6c2efdd18931346283d2d9"
+  "prev_pub_hash": "da902c2e8070fbe82a1211fe564834ebcb50f7fc45ad4040b3068861f12c70b8"
  },
  "nbformat": 4,
  "nbformat_minor": 4
